Worked on user authentication
