# routes/meals.js
@@ -1,7 +1,6 @@
 var express = require('express');
 var router = express.Router();
 var db = require("../models");
-const types = require('../models/types');
 var MealService = require("../services/mealService");
 var mealService = new MealService(db);
 
@@ -9,10 +8,25 @@ var mealService = new MealService(db);
 /* GET home page. */
 router.get('/', async function(req, res, next) {
     const meals = await mealService.get()
-  res.render('meals', {meals: meals, user: req.user});
+  res.render('meals',
+   {meals: meals,
+    isAuthenticated: req.oidc.isAuthenticated()
+  });
 });
 
 router.post('/', async function(req,res,next){
+  // #swagger.tags = ['Meals']
+  // #swagger.description = "Creates a new meal."
+  /* #swagger.parameters['body'] =  {
+    "name": "body",
+    "typeId": "body",
+    "calories": "body",
+    "protein": "body",
+      "schema": {
+        $ref: "#/definitions/Meal"
+      }
+    }
+  */
  let name = req.body.MealName;
  let type = req.body.MealType;
  let calories = req.body.Calories;
